Updated plugins list.

--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
+    "ionic-plugin-keyboard",
     "cordova-plugin-whitelist",
     "cordova-plugin-console",
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard",
+    "cordova-sqlite-storage",
     {
       "locator": "https://github.com/transistorsoft/cordova-background-geolocation.git",
       "id": "cordova-background-geolocation"
