--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "mapbox-gl": "^0.32.1",
+    "moment": "^2.18.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "turf": "^3.0.14",
