--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic-native/core": "^3.1.1",
+    "@ionic-native/device": "^3.2.2",
     "@ionic-native/file": "^3.1.1",
+    "install": "^0.8.7",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "mapbox-gl": "^0.32.1",
     "moment": "^2.18.0",
+    "npm": "^4.4.1",
+    "protobufjs": "^6.6.5",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "turf": "^3.0.14",
