--- a/package.json
+++ b/package.json
@@ -10,37 +10,38 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@ionic-native/core": "^3.1.1",
-    "@ionic-native/device": "^3.2.2",
-    "@ionic-native/file": "^3.1.1",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/core": "3.4.2",
+    "@ionic-native/device": "^3.5.0",
+    "@ionic-native/file": "^3.5.0",
+    "@ionic-native/splash-screen": "3.4.2",
+    "@ionic-native/status-bar": "3.4.2",
     "chartist": "^0.11.0",
     "install": "^0.8.7",
-    "ionic-angular": "2.2.0",
+    "ionic-angular": "3.0.1",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "mapbox-gl": "^0.34.0",
-    "moment": "^2.18.0",
+    "moment": "^2.18.1",
     "ng-chartist": "^1.1.0",
     "npm": "^4.4.1",
-    "protobufjs": "^6.6.5",
-    "rxjs": "5.0.1",
+    "protobufjs": "^6.7.3",
+    "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "turf": "^3.0.14",
-    "zone.js": "0.7.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
+    "@ionic/app-scripts": "1.3.0",
     "@types/chartist": "^0.9.34",
-    "typescript": "2.0.9"
+    "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
     "ionic-plugin-keyboard",
