--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/core": "3.4.2",
-    "@ionic-native/device": "^3.5.0",
-    "@ionic-native/file": "^3.5.0",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",
+    "@ionic-native/core": "3.6.1",
+    "@ionic-native/device": "3.6.1",
+    "@ionic-native/file": "3.6.1",
+    "@ionic-native/location-accuracy": "3.6.1",
+    "@ionic-native/splash-screen": "3.6.1",
+    "@ionic-native/status-bar": "3.6.1",
     "chartist": "^0.11.0",
     "install": "^0.8.7",
     "ionic-angular": "3.0.1",
