--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/core": "3.6.1",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/compiler-cli": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
+    "@ionic-native/core": "^3.6.1",
     "@ionic-native/device": "3.6.1",
     "@ionic-native/file": "3.6.1",
     "@ionic-native/location-accuracy": "3.6.1",
     "@ionic-native/splash-screen": "3.6.1",
+    "@ionic-native/sqlite": "^3.6.1",
     "@ionic-native/status-bar": "3.6.1",
     "chartist": "^0.11.0",
     "install": "^0.8.7",
-    "ionic-angular": "3.0.1",
-    "ionic-native": "2.4.1",
+    "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
-    "mapbox-gl": "^0.36.0",
+    "mapbox-gl": "^0.37.0",
     "moment": "^2.18.1",
     "ng-chartist": "^1.1.0",
     "npm": "^4.4.1",
