--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/file": "3.6.1",
     "@ionic-native/location-accuracy": "3.6.1",
     "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/sqlite": "^3.6.1",
+    "@ionic-native/sqlite": "3.6.1",
     "@ionic-native/status-bar": "3.6.1",
     "chartist": "^0.11.0",
     "install": "^0.8.7",
