--- a/package.json
+++ b/package.json
@@ -1,80 +1,112 @@
 {
-  "name": "bikemoves",
-  "author": "Illinois Department of Transportation",
-  "homepage": "https://bikemoves.me/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.0.2",
-    "@angular/compiler": "4.0.2",
-    "@angular/compiler-cli": "4.0.2",
-    "@angular/core": "4.0.2",
-    "@angular/forms": "4.0.2",
-    "@angular/http": "4.0.2",
-    "@angular/platform-browser": "4.0.2",
-    "@angular/platform-browser-dynamic": "4.0.2",
-    "@ionic-native/core": "^3.6.1",
-    "@ionic-native/device": "3.6.1",
-    "@ionic-native/file": "3.6.1",
-    "@ionic-native/location-accuracy": "3.6.1",
-    "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/sqlite": "3.6.1",
-    "@ionic-native/status-bar": "3.6.1",
-    "chartist": "^0.11.0",
-    "install": "^0.8.7",
-    "ionic-angular": "3.1.1",
-    "ionicons": "3.0.0",
-    "mapbox-gl": "^0.37.0",
-    "moment": "^2.18.1",
-    "ng-chartist": "^1.1.0",
-    "npm": "^4.4.1",
-    "protobufjs": "^6.7.3",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "turf": "^3.0.14",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.0",
-    "@types/chartist": "^0.9.34",
-    "typescript": "~2.2.1"
-  },
-  "cordovaPlugins": [
-    "ionic-plugin-keyboard",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "cordova-sqlite-storage",
-    {
-      "locator": "https://github.com/transistorsoft/cordova-background-geolocation.git",
-      "id": "cordova-background-geolocation"
+    "name": "bikemoves",
+    "author": "Illinois Department of Transportation",
+    "homepage": "https://bikemoves.me/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "cordova-plugin-dialogs",
-    "cordova-plugin-background-fetch",
-    "cordova-plugin-cocoalumberjack"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "dependencies": {
+        "@angular/common": "4.0.2",
+        "@angular/compiler": "4.0.2",
+        "@angular/compiler-cli": "4.0.2",
+        "@angular/core": "4.0.2",
+        "@angular/forms": "4.0.2",
+        "@angular/http": "4.0.2",
+        "@angular/platform-browser": "4.0.2",
+        "@angular/platform-browser-dynamic": "4.0.2",
+        "@ionic-native/core": "^3.6.1",
+        "@ionic-native/device": "3.6.1",
+        "@ionic-native/file": "3.6.1",
+        "@ionic-native/location-accuracy": "3.6.1",
+        "@ionic-native/splash-screen": "3.6.1",
+        "@ionic-native/sqlite": "3.6.1",
+        "@ionic-native/status-bar": "3.6.1",
+        "chartist": "^0.11.0",
+        "install": "^0.8.7",
+        "ionic-angular": "3.1.1",
+        "ionicons": "3.0.0",
+        "mapbox-gl": "^0.37.0",
+        "moment": "^2.18.1",
+        "ng-chartist": "^1.1.0",
+        "npm": "^4.4.1",
+        "protobufjs": "^6.7.3",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.4.0",
+        "turf": "^3.0.14",
+        "zone.js": "^0.8.4",
+        "cordova-android": "~6.1.2",
+        "cordova-background-geolocation": "https://github.com/transistorsoft/cordova-background-geolocation.git#2.6.1",
+        "cordova-plugin-console": "~1.0.5",
+        "cordova-plugin-device": "~1.1.4",
+        "cordova-plugin-file": "~4.3.2",
+        "cordova-plugin-request-location-accuracy": "~2.2.1",
+        "cordova-plugin-splashscreen": "~4.0.2",
+        "cordova-plugin-statusbar": "~2.2.1",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "~2.0.2",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
-    {
-      "platform": "android",
-      "version": "",
-      "locator": "android"
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.1",
+        "@ionic/cli-plugin-cordova": "1.0.0",
+        "@ionic/cli-plugin-ionic-angular": "1.0.0",
+        "@types/chartist": "^0.9.34",
+        "typescript": "~2.2.1"
+    },
+    "cordovaPlugins": [
+        "ionic-plugin-keyboard",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "cordova-sqlite-storage",
+        {
+            "locator": "https://github.com/transistorsoft/cordova-background-geolocation.git",
+            "id": "cordova-background-geolocation"
+        },
+        "cordova-plugin-dialogs",
+        "cordova-plugin-background-fetch",
+        "cordova-plugin-cocoalumberjack"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        },
+        {
+            "platform": "android",
+            "version": "",
+            "locator": "android"
+        }
+    ],
+    "description": "BikeMoves Illinois: Bicycle route recording and assistance",
+    "config": {
+        "ionic_copy": "./config/copy.config.js"
+    },
+    "cordova": {
+        "platforms": [
+            "android"
+        ],
+        "plugins": {
+            "cordova-background-geolocation": {
+                "LICENSE": "61500f38e27b9bbad808b9c6222bda92828081703445386ecf023ff1f54ecd0c"
+            },
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-request-location-accuracy": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-sqlite-storage": {},
+            "ionic-plugin-keyboard": {}
+        }
     }
-  ],
-  "description": "BikeMoves Illinois: Bicycle route recording and assistance",
-  "config": {
-    "ionic_copy": "./config/copy.config.js"
-  }
 }
