--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
         "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.1",
-        "@ionic/cli-plugin-cordova": "1.0.0",
-        "@ionic/cli-plugin-ionic-angular": "1.0.0",
+        "@ionic/app-scripts": "1.3.7",
+        "@ionic/cli-plugin-cordova": "^1.1.2",
+        "@ionic/cli-plugin-ionic-angular": "^1.1.2",
         "@types/chartist": "^0.9.34",
         "typescript": "~2.2.1"
     },
