Upgraded Ionic to 3.3.0.

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.0.2",
-        "@angular/compiler": "4.0.2",
-        "@angular/compiler-cli": "4.0.2",
-        "@angular/core": "4.0.2",
-        "@angular/forms": "4.0.2",
-        "@angular/http": "4.0.2",
-        "@angular/platform-browser": "4.0.2",
-        "@angular/platform-browser-dynamic": "4.0.2",
-        "@ionic-native/core": "^3.6.1",
+        "@angular/common": "4.1.2",
+        "@angular/compiler": "4.1.2",
+        "@angular/compiler-cli": "4.1.2",
+        "@angular/core": "4.1.2",
+        "@angular/forms": "4.1.2",
+        "@angular/http": "4.1.2",
+        "@angular/platform-browser": "4.1.2",
+        "@angular/platform-browser-dynamic": "4.1.2",
+        "@ionic-native/core": "3.6.1",
         "@ionic-native/device": "3.6.1",
         "@ionic-native/file": "3.6.1",
         "@ionic-native/location-accuracy": "3.6.1",
@@ -27,7 +27,7 @@
         "@ionic-native/status-bar": "3.6.1",
         "chartist": "^0.11.0",
         "install": "^0.8.7",
-        "ionic-angular": "3.1.1",
+        "ionic-angular": "3.3.0",
         "ionicons": "3.0.0",
         "mapbox-gl": "^0.37.0",
         "moment": "^2.18.1",
@@ -35,9 +35,9 @@
         "npm": "^4.4.1",
         "protobufjs": "^6.7.3",
         "rxjs": "5.1.1",
-        "sw-toolbox": "3.4.0",
+        "sw-toolbox": "3.6.0",
         "turf": "^3.0.14",
-        "zone.js": "^0.8.4",
+        "zone.js": "0.8.10",
         "cordova-android": "~6.1.2",
         "cordova-background-geolocation": "https://github.com/transistorsoft/cordova-background-geolocation.git#2.6.1",
         "cordova-plugin-console": "~1.0.5",
@@ -55,7 +55,7 @@
         "@ionic/cli-plugin-cordova": "^1.2.1",
         "@ionic/cli-plugin-ionic-angular": "^1.2.0",
         "@types/chartist": "^0.9.34",
-        "typescript": "~2.2.1"
+        "typescript": "2.3.3"
     },
     "cordovaPlugins": [
         "ionic-plugin-keyboard",
