--- a/package.json
+++ b/package.json
@@ -26,8 +26,19 @@
         "@ionic-native/sqlite": "3.6.1",
         "@ionic-native/status-bar": "3.6.1",
         "chartist": "^0.11.0",
+        "cordova-android": "~6.1.2",
+        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.7.1",
+        "cordova-plugin-console": "~1.0.5",
+        "cordova-plugin-device": "~1.1.4",
+        "cordova-plugin-file": "~4.3.2",
+        "cordova-plugin-request-location-accuracy": "~2.2.1",
+        "cordova-plugin-splashscreen": "~4.0.2",
+        "cordova-plugin-statusbar": "~2.2.1",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "~2.0.2",
         "install": "^0.8.7",
         "ionic-angular": "3.3.0",
+        "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
         "mapbox-gl": "^0.37.0",
         "moment": "^2.18.1",
@@ -37,18 +48,7 @@
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
         "turf": "^3.0.14",
-        "zone.js": "0.8.10",
-        "cordova-android": "~6.1.2",
-        "cordova-background-geolocation": "https://github.com/transistorsoft/cordova-background-geolocation.git#2.6.1",
-        "cordova-plugin-console": "~1.0.5",
-        "cordova-plugin-device": "~1.1.4",
-        "cordova-plugin-file": "~4.3.2",
-        "cordova-plugin-request-location-accuracy": "~2.2.1",
-        "cordova-plugin-splashscreen": "~4.0.2",
-        "cordova-plugin-statusbar": "~2.2.1",
-        "cordova-plugin-whitelist": "1.3.1",
-        "cordova-sqlite-storage": "~2.0.2",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "zone.js": "0.8.10"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
