--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
         "clean": "ionic-app-scripts clean",
         "build": "ionic-app-scripts build",
         "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+        "ionic:serve": "ionic-app-scripts serve",
+        "messages": "pbjs -t static-module -w commonjs -o src/app/messages.js src/proto/bikemoves.proto & pbts -o src/app/messages.d.ts src/app/messages.js"
     },
     "dependencies": {
-        "@angular/common": "4.1.2",
-        "@angular/compiler": "4.1.2",
-        "@angular/compiler-cli": "4.1.2",
-        "@angular/core": "4.1.2",
-        "@angular/forms": "4.1.2",
-        "@angular/http": "4.1.2",
-        "@angular/platform-browser": "4.1.2",
-        "@angular/platform-browser-dynamic": "4.1.2",
-        "@ionic-native/core": "3.6.1",
-        "@ionic-native/device": "3.6.1",
-        "@ionic-native/file": "3.6.1",
-        "@ionic-native/location-accuracy": "3.6.1",
-        "@ionic-native/splash-screen": "3.6.1",
-        "@ionic-native/sqlite": "3.6.1",
-        "@ionic-native/status-bar": "3.6.1",
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/core": "3.12.1",
+        "@ionic-native/device": "3.12.1",
+        "@ionic-native/file": "3.12.1",
+        "@ionic-native/location-accuracy": "3.12.1",
+        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/sqlite": "3.12.1",
+        "@ionic-native/status-bar": "3.12.1",
         "chartist": "^0.11.0",
         "cordova-android": "~6.1.2",
-        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.7.1",
+        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.7.3",
         "cordova-plugin-device": "~1.1.4",
         "cordova-plugin-file": "~4.3.2",
         "cordova-plugin-request-location-accuracy": "~2.2.1",
@@ -36,25 +37,25 @@
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-sqlite-storage": "~2.0.2",
         "install": "^0.8.7",
-        "ionic-angular": "3.3.0",
+        "ionic-angular": "3.4.1",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
-        "mapbox-gl": "^0.37.0",
+        "mapbox-gl": "0.38.0",
         "moment": "^2.18.1",
         "ng-chartist": "^1.1.0",
         "npm": "^4.4.1",
-        "protobufjs": "^6.7.3",
-        "rxjs": "5.1.1",
+        "protobufjs": "6.8.0",
+        "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "turf": "^3.0.14",
-        "zone.js": "0.8.10"
+        "zone.js": "0.8.12"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
         "@ionic/cli-plugin-cordova": "^1.2.1",
         "@ionic/cli-plugin-ionic-angular": "^1.2.0",
         "@types/chartist": "^0.9.34",
-        "typescript": "2.3.3"
+        "typescript": "2.3.4"
     },
     "cordovaPlugins": [
         "ionic-plugin-keyboard",
