--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "ionic-angular": "3.4.1",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
-        "mapbox-gl": "0.38.0",
+        "mapbox-gl": "^0.37.0",
         "moment": "^2.18.1",
         "ng-chartist": "^1.1.0",
         "npm": "^4.4.1",
