--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "^1.2.1",
-        "@ionic/cli-plugin-ionic-angular": "^1.2.0",
+        "@ionic/app-scripts": "^1.3.12",
+        "@ionic/cli-plugin-cordova": "^1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "^1.3.1",
         "@types/chartist": "^0.9.34",
+        "array-flatten": "^2.1.1",
         "typescript": "2.3.4"
     },
     "cordovaPlugins": [
