--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     ],
     "description": "BikeMoves Illinois: Bicycle route recording and assistance",
     "config": {
-        "ionic_copy": "./config/copy.config.js"
+        "ionic_copy": "./config/copy.config.js",
+        "ionic_webpack": "./config/webpack.config.js"
     },
     "cordova": {
         "platforms": [
