--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "chartist": "^0.11.0",
         "cordova-android": "~6.1.2",
         "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.7.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "~1.1.4",
         "cordova-plugin-file": "~4.3.2",
         "cordova-plugin-request-location-accuracy": "~2.2.1",
@@ -52,8 +53,6 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
-        "@ionic/cli-plugin-cordova": "^1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "^1.3.1",
         "@types/chartist": "^0.9.34",
         "array-flatten": "^2.1.1",
         "typescript": "2.3.4"
@@ -93,7 +92,8 @@
     },
     "cordova": {
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ],
         "plugins": {
             "cordova-background-geolocation": {
