--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/device": "3.12.1",
-        "@ionic-native/file": "3.12.1",
-        "@ionic-native/location-accuracy": "3.12.1",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/sqlite": "3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/core": "^4.2.1",
+        "@ionic-native/device": "^4.2.1",
+        "@ionic-native/file": "^4.2.1",
+        "@ionic-native/location-accuracy": "^4.2.1",
+        "@ionic-native/splash-screen": "^4.2.1",
+        "@ionic-native/sqlite": "^4.2.1",
+        "@ionic-native/status-bar": "^4.2.1",
         "chartist": "^0.11.0",
-        "cordova-android": "~6.1.2",
-        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.7.3",
+        "cordova-android": "^6.2.3",
+        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-background-fetch": "^5.0.0",
         "cordova-plugin-device": "~1.1.4",
         "cordova-plugin-file": "~4.3.2",
         "cordova-plugin-request-location-accuracy": "~2.2.1",
@@ -38,7 +39,7 @@
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-sqlite-storage": "~2.0.2",
         "install": "^0.8.7",
-        "ionic-angular": "3.4.1",
+        "ionic-angular": "^3.6.0",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
         "mapbox-gl": "^0.37.0",
@@ -52,7 +53,7 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^1.3.12",
+        "@ionic/app-scripts": "^2.1.4",
         "@types/chartist": "^0.9.34",
         "array-flatten": "^2.1.1",
         "typescript": "2.3.4"
@@ -99,6 +100,7 @@
             "cordova-background-geolocation": {
                 "LICENSE": "61500f38e27b9bbad808b9c6222bda92828081703445386ecf023ff1f54ecd0c",
                 "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Background location tracking is required to record your trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
+                "LOCATION_ALWAYS_AND_WHEN_IN_USE_USAGE_DESCRIPTION": "The Always setting is required to record trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
                 "LOCATION_WHEN_IN_USE_USAGE_DESCRIPTION": "Location tracking is required to record your trips.",
                 "MOTION_USAGE_DESCRIPTION": "Using the accelerometer allows BikeMoves to record your trips more efficiently.",
                 "BACKGROUND_MODE_LOCATION": "<string>location</string>"
