--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@ionic-native/splash-screen": "^4.2.1",
         "@ionic-native/sqlite": "^4.2.1",
         "@ionic-native/status-bar": "^4.2.1",
+        "@turf/turf": "^4.6.1",
+        "@types/geojson": "^1.0.3",
         "chartist": "^0.11.0",
         "cordova-android": "^6.2.3",
         "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git",
@@ -42,14 +44,13 @@
         "ionic-angular": "^3.6.0",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
-        "mapbox-gl": "^0.37.0",
+        "mapbox-gl": "^0.39.1",
         "moment": "^2.18.1",
         "ng-chartist": "^1.1.0",
         "npm": "^4.4.1",
         "protobufjs": "6.8.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "turf": "^3.0.14",
         "zone.js": "0.8.12"
     },
     "devDependencies": {
