--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@types/geojson": "^1.0.3",
         "chartist": "^0.11.0",
         "cordova-android": "^6.2.3",
-        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git",
+        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.8.2",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-background-fetch": "^5.0.0",
         "cordova-plugin-device": "~1.1.4",
