--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
         "@types/geojson": "^1.0.3",
         "chartist": "^0.11.0",
         "cordova-android": "^6.2.3",
-        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.8.2",
+        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-background-fetch": "^5.0.0",
+        "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "~1.1.4",
         "cordova-plugin-file": "~4.3.2",
         "cordova-plugin-request-location-accuracy": "~2.2.1",
@@ -113,7 +114,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-console": {}
         }
     }
 }
