--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "^4.2.1",
         "@ionic-native/device": "^4.2.1",
+        "@ionic-native/email-composer": "^4.2.1",
         "@ionic-native/file": "^4.2.1",
         "@ionic-native/location-accuracy": "^4.2.1",
         "@ionic-native/splash-screen": "^4.2.1",
@@ -35,6 +36,7 @@
         "cordova-plugin-background-fetch": "^5.0.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "~1.1.4",
+        "cordova-plugin-email-composer": "^0.8.9",
         "cordova-plugin-file": "~4.3.2",
         "cordova-plugin-request-location-accuracy": "~2.2.1",
         "cordova-plugin-splashscreen": "~4.0.2",
@@ -115,7 +117,8 @@
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-console": {}
+            "cordova-plugin-console": {},
+            "cordova-plugin-email-composer": {}
         }
     }
 }
