--- a/package.json
+++ b/package.json
@@ -1,124 +1,124 @@
 {
-    "name": "bikemoves",
-    "author": "Illinois Department of Transportation",
-    "homepage": "https://bikemoves.me/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve",
-        "messages": "pbjs -t static-module -w commonjs -o src/app/messages.js src/proto/bikemoves.proto & pbts -o src/app/messages.d.ts src/app/messages.js"
+  "name": "bikemoves",
+  "author": "Illinois Department of Transportation",
+  "homepage": "https://bikemoves.me/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve",
+    "messages": "pbjs -t static-module -w commonjs -o src/app/messages.js src/proto/bikemoves.proto & pbts -o src/app/messages.d.ts src/app/messages.js"
+  },
+  "dependencies": {
+    "@angular/common": "^4.4.3",
+    "@angular/compiler": "^4.4.3",
+    "@angular/compiler-cli": "^4.4.3",
+    "@angular/core": "^4.4.3",
+    "@angular/forms": "^4.4.3",
+    "@angular/http": "^4.4.3",
+    "@angular/platform-browser": "^4.4.3",
+    "@angular/platform-browser-dynamic": "^4.4.3",
+    "@ionic-native/core": "^4.2.1",
+    "@ionic-native/device": "^4.2.1",
+    "@ionic-native/email-composer": "^4.2.1",
+    "@ionic-native/file": "^4.2.1",
+    "@ionic-native/location-accuracy": "^4.2.1",
+    "@ionic-native/splash-screen": "^4.2.1",
+    "@ionic-native/sqlite": "^4.2.1",
+    "@ionic-native/status-bar": "^4.2.1",
+    "@turf/turf": "^4.6.1",
+    "@types/geojson": "^1.0.3",
+    "chartist": "^0.11.0",
+    "cordova-android": "^6.2.3",
+    "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.8.4",
+    "cordova-ios": "^4.4.0",
+    "cordova-plugin-background-fetch": "^5.0.0",
+    "cordova-plugin-console": "^1.0.7",
+    "cordova-plugin-device": "~1.1.4",
+    "cordova-plugin-email-composer": "^0.8.9",
+    "cordova-plugin-file": "~4.3.2",
+    "cordova-plugin-request-location-accuracy": "~2.2.1",
+    "cordova-plugin-splashscreen": "~4.0.2",
+    "cordova-plugin-statusbar": "~2.2.1",
+    "cordova-plugin-whitelist": "1.3.1",
+    "cordova-sqlite-storage": "~2.0.2",
+    "install": "^0.8.7",
+    "ionic-angular": "^3.7.1",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "ionicons": "3.0.0",
+    "mapbox-gl": "^0.39.1",
+    "moment": "^2.18.1",
+    "ng-chartist": "^1.1.0",
+    "npm": "^4.4.1",
+    "protobufjs": "6.8.0",
+    "rxjs": "^5.4.3",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "^3.0.0",
+    "@types/chartist": "^0.9.34",
+    "array-flatten": "^2.1.1",
+    "typescript": "2.3.4"
+  },
+  "cordovaPlugins": [
+    "ionic-plugin-keyboard",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "cordova-sqlite-storage",
+    {
+      "locator": "https://github.com/transistorsoft/cordova-background-geolocation.git",
+      "id": "cordova-background-geolocation"
     },
-    "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "^4.2.1",
-        "@ionic-native/device": "^4.2.1",
-        "@ionic-native/email-composer": "^4.2.1",
-        "@ionic-native/file": "^4.2.1",
-        "@ionic-native/location-accuracy": "^4.2.1",
-        "@ionic-native/splash-screen": "^4.2.1",
-        "@ionic-native/sqlite": "^4.2.1",
-        "@ionic-native/status-bar": "^4.2.1",
-        "@turf/turf": "^4.6.1",
-        "@types/geojson": "^1.0.3",
-        "chartist": "^0.11.0",
-        "cordova-android": "^6.2.3",
-        "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.8.4",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-background-fetch": "^5.0.0",
-        "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "~1.1.4",
-        "cordova-plugin-email-composer": "^0.8.9",
-        "cordova-plugin-file": "~4.3.2",
-        "cordova-plugin-request-location-accuracy": "~2.2.1",
-        "cordova-plugin-splashscreen": "~4.0.2",
-        "cordova-plugin-statusbar": "~2.2.1",
-        "cordova-plugin-whitelist": "1.3.1",
-        "cordova-sqlite-storage": "~2.0.2",
-        "install": "^0.8.7",
-        "ionic-angular": "^3.6.0",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "ionicons": "3.0.0",
-        "mapbox-gl": "^0.39.1",
-        "moment": "^2.18.1",
-        "ng-chartist": "^1.1.0",
-        "npm": "^4.4.1",
-        "protobufjs": "6.8.0",
-        "rxjs": "5.4.0",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+    "cordova-plugin-dialogs",
+    "cordova-plugin-background-fetch",
+    "cordova-plugin-cocoalumberjack"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    {
+      "platform": "ios",
+      "version": "",
+      "locator": "ios"
     },
-    "devDependencies": {
-        "@ionic/app-scripts": "^2.1.4",
-        "@types/chartist": "^0.9.34",
-        "array-flatten": "^2.1.1",
-        "typescript": "2.3.4"
-    },
-    "cordovaPlugins": [
-        "ionic-plugin-keyboard",
-        "cordova-plugin-whitelist",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-device",
-        "cordova-plugin-splashscreen",
-        "cordova-sqlite-storage",
-        {
-            "locator": "https://github.com/transistorsoft/cordova-background-geolocation.git",
-            "id": "cordova-background-geolocation"
-        },
-        "cordova-plugin-dialogs",
-        "cordova-plugin-background-fetch",
-        "cordova-plugin-cocoalumberjack"
-    ],
-    "cordovaPlatforms": [
-        "ios",
-        {
-            "platform": "ios",
-            "version": "",
-            "locator": "ios"
-        },
-        {
-            "platform": "android",
-            "version": "",
-            "locator": "android"
-        }
-    ],
-    "description": "BikeMoves Illinois: Bicycle route recording and assistance",
-    "config": {
-        "ionic_copy": "./config/copy.config.js",
-        "ionic_webpack": "./config/webpack.config.js"
-    },
-    "cordova": {
-        "platforms": [
-            "android",
-            "ios"
-        ],
-        "plugins": {
-            "cordova-background-geolocation": {
-                "LICENSE": "61500f38e27b9bbad808b9c6222bda92828081703445386ecf023ff1f54ecd0c",
-                "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Background location tracking is required to record your trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
-                "LOCATION_ALWAYS_AND_WHEN_IN_USE_USAGE_DESCRIPTION": "The Always setting is required to record trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
-                "LOCATION_WHEN_IN_USE_USAGE_DESCRIPTION": "Location tracking is required to record your trips.",
-                "MOTION_USAGE_DESCRIPTION": "Using the accelerometer allows BikeMoves to record your trips more efficiently.",
-                "BACKGROUND_MODE_LOCATION": "<string>location</string>"
-            },
-            "cordova-plugin-device": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-request-location-accuracy": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-sqlite-storage": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-console": {},
-            "cordova-plugin-email-composer": {}
-        }
+    {
+      "platform": "android",
+      "version": "",
+      "locator": "android"
     }
+  ],
+  "description": "BikeMoves Illinois: Bicycle route recording and assistance",
+  "config": {
+    "ionic_copy": "./config/copy.config.js",
+    "ionic_webpack": "./config/webpack.config.js"
+  },
+  "cordova": {
+    "platforms": [
+      "android",
+      "ios"
+    ],
+    "plugins": {
+      "cordova-background-geolocation": {
+        "LICENSE": "61500f38e27b9bbad808b9c6222bda92828081703445386ecf023ff1f54ecd0c",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Background location tracking is required to record your trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
+        "LOCATION_ALWAYS_AND_WHEN_IN_USE_USAGE_DESCRIPTION": "The Always setting is required to record trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
+        "LOCATION_WHEN_IN_USE_USAGE_DESCRIPTION": "Location tracking is required to record your trips.",
+        "MOTION_USAGE_DESCRIPTION": "Using the accelerometer allows BikeMoves to record your trips more efficiently.",
+        "BACKGROUND_MODE_LOCATION": "<string>location</string>"
+      },
+      "cordova-plugin-device": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-sqlite-storage": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-email-composer": {}
+    }
+  }
 }
