--- a/package.json
+++ b/package.json
@@ -52,14 +52,13 @@
     "mapbox-gl": "^0.41.0",
     "moment": "^2.19.1",
     "ng-chartist": "^1.1.0",
-    "npm": "^4.4.1",
     "protobufjs": "6.8.0",
     "rxjs": "^5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.0.0",
+    "@ionic/app-scripts": "3.0.1",
     "@types/chartist": "^0.9.34",
     "array-flatten": "^2.1.1",
     "typescript": "2.3.4"
