--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/geojson": "^1.0.3",
     "chartist": "^0.11.0",
     "cordova-android": "^6.3.0",
-    "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.8.5",
+    "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.9.1",
     "cordova-ios": "^4.5.2",
     "cordova-plugin-background-fetch": "^5.1.1",
     "cordova-plugin-cocoalumberjack": "0.0.4",
@@ -81,7 +81,8 @@
         "LOCATION_ALWAYS_AND_WHEN_IN_USE_USAGE_DESCRIPTION": "The Always setting is required to record trips while BikeMoves is in the background. Trips are only recorded while the app is running.",
         "LOCATION_WHEN_IN_USE_USAGE_DESCRIPTION": "Location tracking is required to record your trips.",
         "MOTION_USAGE_DESCRIPTION": "Using the accelerometer allows BikeMoves to record your trips more efficiently.",
-        "BACKGROUND_MODE_LOCATION": "<string>location</string>"
+        "BACKGROUND_MODE_LOCATION": "<string>location</string>",
+        "APPCOMPAT_VERSION": "27.0.0"
       },
       "cordova-plugin-device": {},
       "cordova-plugin-file": {},
