--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "messages": "pbjs -t static-module -w commonjs -o src/app/messages.js src/proto/bikemoves.proto & pbts -o src/app/messages.d.ts src/app/messages.js"
   },
   "dependencies": {
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/compiler-cli": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@ionic-native/core": "^4.3.2",
-    "@ionic-native/device": "^4.3.2",
-    "@ionic-native/email-composer": "^4.3.2",
-    "@ionic-native/file": "^4.3.2",
-    "@ionic-native/location-accuracy": "^4.3.2",
-    "@ionic-native/splash-screen": "^4.3.2",
-    "@ionic-native/sqlite": "^4.3.2",
-    "@ionic-native/status-bar": "^4.3.2",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/core": "4.5.1",
+    "@ionic-native/device": "4.5.1",
+    "@ionic-native/email-composer": "4.5.1",
+    "@ionic-native/file": "4.5.1",
+    "@ionic-native/location-accuracy": "4.5.1",
+    "@ionic-native/splash-screen": "4.5.1",
+    "@ionic-native/sqlite": "4.5.1",
+    "@ionic-native/status-bar": "4.5.1",
     "@turf/turf": "^4.7.3",
     "@types/geojson": "^1.0.3",
     "chartist": "^0.11.0",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-background-geolocation": "git+https://github.com/transistorsoft/cordova-background-geolocation.git#2.9.1",
-    "cordova-ios": "^4.5.2",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-background-fetch": "^5.1.1",
     "cordova-plugin-cocoalumberjack": "0.0.4",
     "cordova-plugin-compat": "^1.2.0",
@@ -46,19 +46,19 @@
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-sqlite-storage": "^2.0.4",
     "install": "^0.8.7",
-    "ionic-angular": "^3.7.1",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "mapbox-gl": "^0.41.0",
+    "mapbox-gl": "0.42.2",
     "moment": "^2.19.1",
     "ng-chartist": "^1.1.0",
     "protobufjs": "6.8.0",
-    "rxjs": "^5.4.3",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
+    "@ionic/app-scripts": "^3.1.5",
     "@types/chartist": "^0.9.34",
     "array-flatten": "^2.1.1",
     "typescript": "2.3.4"
